--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "bezhansalleh/filament-language-switch": "^3.1",
         "laravel/framework": "^11.9",
         "laravel/sanctum": "^4.0",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "midtrans/midtrans-php": "^2.5"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
