--- a/vercel.json
+++ b/vercel.json
@@ -11,8 +11,8 @@
     ],
     "env": {
         "APP_ENV": "production",
-        "APP_DEBUG": "true",
-        "APP_URL": "https://be-cuyshop.vercel.app",
+        "APP_DEBUG": "false",
+        "APP_URL": "https://cuyshop-backend.vercel.app",
         "APP_CONFIG_CACHE": "/tmp/config.php",
         "APP_EVENTS_CACHE": "/tmp/events.php",
         "APP_PACKAGES_CACHE": "/tmp/packages.php",
